--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
 		"@testing-library/jest-dom": "^5.11.10",
 		"@testing-library/react": "^11.2.5",
 		"@testing-library/user-event": "^12.8.3",
+		"postcss": "^8.4.49",
+		"postcss-safe-parser": "^6.0.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.2.0",
@@ -18,7 +20,7 @@
 		"web-vitals": "^1.1.1"
 	},
 	"scripts": {
-		"start": "react-scripts start",
+		 "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
@@ -58,3 +60,5 @@
 		"prettier": "^2.1.1"
 	}
 }
+
+
